Cambios en dojo

--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Williams Bicycles</title>
+    <title>Grupos Musicales Favoritos</title>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="./paginas/Nosotros.html">Nosotros</a></li>
-                <li><a href="./paginas/Contacto.html">Contacto</a></li>
-                <li><a href="./paginas/Sucursales.html">Sucursales</a></li>
+                <li><a href="./paginas/Dojo.html">El Dojo</a></li>
+                <li><a href="./paginas/Lilsupa1.html">Lil Supa</a></li>
+                <li><a href="./paginas/maroon5.html">Maroon 5</a></li>
             </ul>
         </nav>
 </head>
 <body>
-    <h1>Williams Bicycles</h1>
+    <h1>Grupos Musicales</h1>
     <hr>
-    <h2>Bicicletería en Villa Urquiza</h2>
+    <h2>Grupos musicales favoritos
+    </h2>
     <br>
-    <p>Nos dedicamos a la reparación de bicicletas en general, con un enfoque en las bicicletas plegables</p>
-    <h3>Encontranos en Villa Urquiza</h3>
-    <p>Estamos ubicados en la Av. Triunvirato 5822</p>
-    <h4>Mejores precios</h4>
-    <p>Vení a conocer nuestros precios pensados en nuestros clientes</p>
-    <h5>Calidad del servicio</h5>
-    <p>Nuestras calificaciones reflejan la calidad de nuestro servicio, gracias por la confianza de parte de ustedes</p>
+    <p>Mis grupos musicales favoritos son de estilos variados...</h3>
+    <p>El Dojo, Maroon 5 y Lil Supa (como solista)</p>
+    <h4>Diversos estilos</h4>
+    <p>Van desde el Rap Hardcore, hasta el Pop Rock</p>
+    <h5>Artistas</h5>
+    <p>Artistas importantes como Adam Levine y Marlon Morales</p>
     <h6>Reconocimiento</h6>
-    <p>Reconocimiento nacional e internacional por multiples empresas</p>
+    <p>Reconocimiento nacional e internacional por sus obras musicales y audiovisuales</p>
 
 </body>
 </html>
